--- a/Data-Structure/2.1 linked_list.md
+++ b/Data-Structure/2.1 linked_list.md
@@ -6,6 +6,13 @@
 >
 > 3 双向链表
 
+
+
+**特点**
+
+- 可以使用任意存储空间
+- 数据元素 $a_i$ 在内存中的存储映像称为结点，每个结点有两个域构成：存储数据元素值的**数据域**，存储后继地址的**指针域**。
+
 ---
 
 ## 1 单向链表
